# holo-noteseeker

./: .gitignore  Cargo.toml  LICENSE  default.nix  notes.md  package-lock.json  package.json
dnas/main/workdir/: dna.yaml
dnas/main/zomes/coordinator/logic/: Cargo.toml
dnas/main/zomes/coordinator/logic/src/: all_notes.rs  all_notes_by_author.rs  all_tags.rs  all_tags_by_author.rs  lib.rs  note.rs  tag.rs
dnas/main/zomes/integrity/logic_integrity/: Cargo.toml
dnas/main/zomes/integrity/logic_integrity/src/: lib.rs  note.rs  tag.rs
nix/: sources.json
tests/src/main/logic/: note.test.ts  tag.test.ts
ui/: web-dev-server.config.mjs
ui/src/: App.svelte
ui/src/main/logic/: AllNotes.svelte  AllNotesByAuthor.svelte  AllTags.svelte  AllTagsByAuthor.svelte  CreateNote.svelte  CreateTag.svelte  NoteDetail.svelte  Search.svelte  TagDetail.svelte  TagForNote.svelte  note.ts  tag.ts
workdir/: happ.yaml  web-happ.yaml
