[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.157"
serde = "1"

[workspace.dependencies.logic]
path = "dnas/main/zomes/coordinator/logic"

[workspace.dependencies.logic_integrity]
path = "dnas/main/zomes/integrity/logic_integrity"
